<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"     xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    tools:context=".AddTripFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_trip_input_layout_tripName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/add_trip_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/trip_name" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_trip_input_layout_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/tv_trip_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/trip_select_date"
                    android:inputType="date" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_trip_input_layout_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/tv_trip_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/trip_select_date"
                    android:inputType="date" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_trip_input_layout_pc_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/add_trip_pc_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/trip_enter_pc_code" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_trip_input_layout_pc_code_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_international_trip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:text="@string/is_internatinal_trip"
                    android:textAppearance="@style/Base.V7.Widget.AppCompat.EditText"
                    android:textSize="18sp" />


                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_margin="10dp"
                    android:layout_toRightOf="@+id/tv_international_trip" />

            </RelativeLayout>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/add_trip_cuurency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Currency"
                android:maxLines="1"
                android:inputType="textNoSuggestions"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:focusable="false"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>
        </android.support.design.widget.TextInputLayout>

        <com.rey.material.widget.Spinner
            style="@style/Material.Widget.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rd_style="@style/Material.Drawable.Ripple.Wave"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_trip_input_layout_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_weight="1" android:visibility="gone">

            <EditText
                android:id="@+id/tv_trip_currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/trip_currency"
                android:inputType="date" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_trip_input_layout_forex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/tv_trip_forex_advance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/trip_forex_advance"
                android:inputType="date" />


        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/create_trip"
            android:textColor="@android:color/white" />
    </LinearLayout>


</ScrollView>